# RAG-Chronicle

./: .gitignore  README.md  install.sh  pyproject.toml  test_generation.py
configs/: default.yaml
examples/: basic_example.py
rag_lab/: __init__.py  cli.py  config.py  data.py
rag_lab/eval/: __init__.py  retrieval_metrics.py  squad_metrics.py
rag_lab/generator/: __init__.py  prompts.py  qwen.py
rag_lab/retrievers/: __init__.py  base.py  bm25.py  boolean.py  dense.py  sota.py  tfidf.py
rag_lab/utils/: __init__.py  io.py  seeds.py  text.py  timing.py
tests/: test_basic.py
